@@ -9,6 +9,10 @@ Here is a history of user visible changes to Mailman.
 
   Bug fixes and other patches
 
+    - DKIM-Signature:, DomainKey-Signature: and Authentication-Results:
+      headers are now removed by default from posts to anonymous lists.
+      (LP: #1444673)
+
     - The list admin web UI Mambership List search function often doesn't
       return correct results for search strings (regexps) that contain
       non-ascii characters.  This is partially fixed.  (LP: #1442298)
